# swagger_server/controllers/links_controller.py
@@ -1,16 +1,16 @@
 import connexion
 import six
 
-from swagger_server.models.model import Model  # noqa: E501
+from swagger_server.models.link import Link  # noqa: E501
 from swagger_server import util
 
 
-def get_models():  # noqa: E501
-    """Retrieve a list of all available models in the system
+def get_links():  # noqa: E501
+    """Retrieve a list of links between the nodes of the system
 
      # noqa: E501
 
 
-    :rtype: List[Model]
+    :rtype: List[Link]
     """
     return 'do some magic!'
