# swagger_server/swagger/swagger.yaml
@@ -2,7 +2,7 @@
 swagger: "2.0"
 info:
   description: "This is the API specification for the [Crops in Silico](http://cropsinsilico.org/)\
-    \ project.  This documentation was generated using [Swagger](http://swagger.io)."
+    \ project. This documentation was generated using [Swagger](http://swagger.io)."
   version: "0.1.3"
   title: "Crops in Silico API"
   termsOfService: "https://www.wikihow.com/Write-Terms-and-Conditions"
@@ -12,7 +12,7 @@ info:
     name: "BSD-3"
     url: "https://opensource.org/licenses/BSD-3-Clause"
 host: "proto.cis.ndslabs.org"
-basePath: "/api/v1"
+basePath: "/oauth2/api/v1"
 tags:
 - name: "models"
   description: "Retrieve server data (static)"
@@ -41,6 +41,31 @@ paths:
             type: "array"
             items:
               $ref: "#/definitions/Model"
+      x-swagger-router-controller: "swagger_server.controllers.models_controller"
+    post:
+      tags:
+      - "models"
+      summary: "Creates a new model in the system catalog"
+      description: ""
+      operationId: "post_models"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "A new model to add to the system"
+        required: true
+        schema:
+          $ref: "#/definitions/Model"
+      responses:
+        200:
+          description: "OK"
+        400:
+          description: "Invalid input"
+        500:
+          description: "Server error"
       x-swagger-router-controller: "swagger_server.controllers.models_controller"
   /graphs:
     post:
@@ -253,6 +278,37 @@ definitions:
           client_of: "client_of"
           id: 0
         id: 0
+      - outputs:
+        - name: "name"
+          model_id: "model_id"
+        - name: "name"
+          model_id: "model_id"
+        inputs:
+        - name: "name"
+          model_id: "model_id"
+        - name: "name"
+          model_id: "model_id"
+        name: "name"
+        description: "description"
+        model:
+          args: "args"
+          outputs:
+          - name: "name"
+            model_id: "model_id"
+          - name: "name"
+            model_id: "model_id"
+          is_server: "is_server"
+          driver: {}
+          inputs:
+          - name: "name"
+            model_id: "model_id"
+          - name: "name"
+            model_id: "model_id"
+          name: "name"
+          description: "description"
+          client_of: "client_of"
+          id: 0
+        id: 0
       edges:
       - args: "args"
         name: "name"
@@ -364,7 +420,7 @@ definitions:
         $ref: "#/definitions/Com"
       operation:
         type: "string"
-    description: "Represents a connection from an input Com of a Node \\ to an output\
+    description: "Represents a connection from an input Com of a Node to an output\
       \ Com"
     example:
       args: "args"
@@ -380,11 +436,14 @@ definitions:
       operation: "operation"
   ModelDriver:
     type: "string"
-    description: "The driver to use for running a particular model"
+    description: "The driver to use to run this model"
     enum:
     - "GCCModelDriver"
     - "PythonModelDriver"
     - "MatlabModelDriver"
+    - "MakeModelDriver"
+    - "CMakeModelDriver"
+    - "ModelDriver"
   EdgeType:
     type: "string"
     description: "The driver to use for this input / output Com"
